--- a/frontend/src/css/index.css
+++ b/frontend/src/css/index.css
@@ -235,3 +235,11 @@ input:focus, textarea:focus {
 .modal-content p {
   color: #666;
 }
+
+.checkbox-group {
+  flex-direction: row;
+  align-items: center;
+  margin-bottom: 20px;
+  margin-top: 20px;
+  padding: 10px;
+}
